# otel-cpp-starter

./: .env.template  .gitignore  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
docker/scripts/: bar.sh  foo.sh  install-abseil-cpp.sh  install-bazel.sh  install-cmake-3.28.1.sh  install-oatpp-library.sh  install-opentelemetry-cpp.sh  install-protobuf-git.sh  install-protobuf-release.sh
roll-dice/: CMakeLists.txt  main.cpp  rolldice.http
roll-dice/tracing/: AppTracer.h  DummyTracer.cpp  DummyTracer.h  GrafanaTracer.cpp  GrafanaTracer.h  Tracer.cpp  Tracer.h  TracerConfig.cpp  TracerConfig.h  TracerConfigurer.cpp  TracerConfigurer.h  TracerProvider.cpp  TracerProvider.h
scripts/: build.sh  install-oatpp-library.sh  install-opentelemetry-cpp.sh  install.sh  run.sh
